--- a/public/shared/nav.html
+++ b/public/shared/nav.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img src="http://localhost:3000/media?id=PokerNightLogo.png" width="30" height="30"
+      <img src="./media/pokerchip.png" width="30" height="30"
         class="d-inline-block align-top" alt="">
       A*Poker
     </a>
