--- a/public/createplayer.html
+++ b/public/createplayer.html
@@ -1,39 +1,135 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Create new Player</title>
+    <meta name="description" content="Our first page" />
+    <meta name="keywords" content="html tutorial template" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
-<head>
-  <title>Player</title>
-  <meta name="description" content="Our first page" />
-  <meta name="keywords" content="html tutorial template" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script
+    type="text/javascript"
+    src="https://npmcdn.com/parse/dist/parse.min.js"
+  ></script>
+  </head>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-</head>
+  <body>
+    <section class="" style="background-color: #1d1e1f">
+      <div class="container">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col col-xl-10">
+            <div class="card" style="border-radius: 1rem">
+              <div class="row g-0">
+                <div class="col-md-6 col-lg-5 d-none d-md-block">
+                  <img
+                    src="./shared/media/logo.png"
+                    alt="login form"
+                    style="border-radius: 1rem 0 0 1rem"
+                    width="100%"
+                    height="100%"
+                  />
+                </div>
 
-<body>
-  <div data-include="nav"></div>
-  <form id="form">
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter name">
-    </div>
-    <div class="form-group">
-      <label for="nickname">Nickname</label>
-      <input type="text" class="form-control" id="nickname" aria-describedby="emailHelp" placeholder="Enter nickname">
-    </div>
-    <div class="form-group">
-      <label for="age">Age</label>
-      <input type="number" class="form-control" id="age" aria-describedby="age" placeholder="Enter birth year">
-    </div>
-    <div class="form-group">
-      <label for="file">Example file profile pic</label>
-      <input type="file" class="form-control-file" id="file">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit form</button>
-  </form>
-  <script src="./scripts/createplayer.js">
-  </script>
-</body>
+                <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                  <div class="card-body h-200 p-4 p-lg-5 text-black">
+                    <form>
+                      <div class="overflow-auto">
+                        <div class="d-flex align-items-center mb-3 pb-1">
+                          <i
+                            class="fas fa-cubes fa-2x me-3"
+                            style="color: #ff6219"
+                          ></i>
+                          <span class="h1 fw-bold mb-0">A*Poker by FGG</span>
+                        </div>
 
+                        <h5
+                          class="fw-normal mb-3 pb-3"
+                          style="letter-spacing: 1px"
+                        >
+                          Enter your details
+                        </h5>
+                        <div class="form-outline mb-4">
+                          <label class="form-label" for="emailInput"
+                            >Email</label
+                          >
+                          <input
+                            type="email"
+                            id="emailInput"
+                            class="form-control form-control-lg"
+                          />
+                        </div>
+                        <div class="form-outline mb-4">
+                          <label class="form-label" for="passwordInput"
+                            >Password</label
+                          >
+                          <input
+                            type="password"
+                            id="passwordInput"
+                            class="form-control form-control-lg"
+                          />
+                        </div>
+                        <div class="form-outline mb-4">
+                          <label class="form-label" for="nameInput">Name</label>
+                          <input
+                            type="text"
+                            id="nameInput"
+                            class="form-control form-control-lg"
+                          />
+                        </div>
+                        <div class="form-outline mb-4">
+                          <label class="form-label" for="nicknameInput"
+                            >Nickname</label
+                          >
+                          <input
+                            type="text"
+                            id="nicknameInput"
+                            class="form-control form-control-lg"
+                          />
+                        </div>
+                        <div class="form-outline mb-4">
+                          <label class="form-label" for="bornInput"
+                            >Born</label
+                          >
+                          <input
+                            type="date"
+                            id="bornInput"
+                            class="form-control form-control-lg"
+                          />
+                        </div>
+                        <div class="form-outline mb-4">
+                          <label class="form-label" for="imgInput"
+                            >Img url</label
+                          >
+                          <input
+                            type="url"
+                            id="imgInput"
+                            class="form-control form-control-lg"
+                          />
+                        </div>
+                        <div class="pt-1 mb-4">
+                          <button
+                            class="btn btn-dark btn-lg btn-block"
+                            type="button"
+                            id="signUpButton"
+                          >
+                            Sing up
+                          </button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="./scripts/createplayer.js"></script>
+  </body>
 </html>
