fix players page

--- a/public/players.html
+++ b/public/players.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-  <title>Player</title>
+  <title>Players</title>
   <meta name="description" content="Our first page" />
   <meta name="keywords" content="html tutorial template" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 </head>
