--- a/public/gameshistory.html
+++ b/public/gameshistory.html
@@ -12,7 +12,34 @@
 </head>
 
 <body>
-  <div data-include="nav"></div>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img src="./shared/media/pokerchip.png" width="30" height="30"
+        class="d-inline-block align-top" alt="">
+      A*Poker
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="./ranking.html">Ranking<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./gameshistory.html">Games<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./players.html">Players<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./rules.html">Rules<span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <div class="container">
     <div class="card-deck" id="card-deck">
     </div>
