--- a/public/createplayer.html
+++ b/public/createplayer.html
@@ -16,6 +16,7 @@
     type="text/javascript"
     src="https://npmcdn.com/parse/dist/parse.min.js"
   ></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
