update: event draft

--- a/public/event.html
+++ b/public/event.html
@@ -69,17 +69,26 @@
     </nav>
     <div class="container">
       <div class="container">
+        <div class="d-flex justify-content-center">
+          <div class="card text-center" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Gin&Poker</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Location: Anton Place</h6>
+            <p class="card-text">DateToSave: 2020-01-02</p>
+          </div>
+        </div></div>
         <div class="row">
           <div class="col-sm">
             <div class="card" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title">Seat 1</h5>
+                <h6 class="card-title">Status: Available</h6>
                 <a href="#" class="btn btn-primary">Claim</a>
               </div>
             </div>
           </div>
           <div class="col-sm">
-            <div class="card" style="width: 18rem">
+            <div class="card text-center" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title">Seat 3</h5>
                 <a href="#" class="btn btn-primary">Claim</a>
@@ -87,9 +96,33 @@
             </div>
           </div>
           <div class="col-sm">
-            <div class="card" style="width: 18rem">
+            <div class="card text-center" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title">Seat 4</h5>
+                <h6 class="card-title">Status: Taken</h6>
+                <h7 class="card-title">Player: Anton Björkman</h7>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm">
+            <div class="card text-center" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Seat 5</h5>
+                <a href="#" class="btn btn-primary">Claim</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="card text-center" style="width: 18rem;">
+              <img class="card-img-top" src="./shared/media/pokertable.png" alt="Card image cap">
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="card text-center" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Seat 5</h5>
                 <a href="#" class="btn btn-primary">Claim</a>
               </div>
             </div>
@@ -97,7 +130,7 @@
         </div>
         <div class="row">
           <div class="col-sm">
-            <div class="card" style="width: 18rem">
+            <div class="card text-center" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title">Seat 5</h5>
                 <a href="#" class="btn btn-primary">Claim</a>
@@ -105,28 +138,7 @@
             </div>
           </div>
           <div class="col-sm">
-            <img src="./shared/media/pokertable.png" />
-          </div>
-          <div class="col-sm">
-            <div class="card" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Seat 5</h5>
-                <a href="#" class="btn btn-primary">Claim</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm">
-            <div class="card" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Seat 5</h5>
-                <a href="#" class="btn btn-primary">Claim</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card" style="width: 18rem">
+            <div class="card text-center" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title">Seat 6</h5>
                 <a href="#" class="btn btn-primary">Claim</a>
@@ -134,7 +146,7 @@
             </div>
           </div>
           <div class="col-sm">
-            <div class="card" style="width: 18rem">
+            <div class="card text-center" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title">Seat 7</h5>
                 <a href="#" class="btn btn-primary">Claim</a>
