--- a/public/event.html
+++ b/public/event.html
@@ -15,6 +15,10 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
@@ -68,94 +72,9 @@
       </div>
     </nav>
     <div class="container">
-      <div class="container">
-        <div class="d-flex justify-content-center">
-          <div class="card text-center" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Gin&Poker</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Location: Anton Place</h6>
-            <p class="card-text">DateToSave: 2020-01-02</p>
-          </div>
-        </div></div>
-        <div class="row">
-          <div class="col-sm">
-            <div class="card" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Seat 1</h5>
-                <h6 class="card-title">Status: Available</h6>
-                <a href="#" class="btn btn-primary">Claim</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card text-center" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Seat 3</h5>
-                <a href="#" class="btn btn-primary">Claim</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card text-center" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Seat 4</h5>
-                <h6 class="card-title">Status: Taken</h6>
-                <h7 class="card-title">Player: Anton Björkman</h7>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm">
-            <div class="card text-center" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Seat 5</h5>
-                <a href="#" class="btn btn-primary">Claim</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card text-center" style="width: 18rem;">
-              <img class="card-img-top" src="./shared/media/pokertable.png" alt="Card image cap">
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card text-center" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Seat 5</h5>
-                <a href="#" class="btn btn-primary">Claim</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm">
-            <div class="card text-center" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Seat 5</h5>
-                <a href="#" class="btn btn-primary">Claim</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card text-center" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Seat 6</h5>
-                <a href="#" class="btn btn-primary">Claim</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card text-center" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">Seat 7</h5>
-                <a href="#" class="btn btn-primary">Claim</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="d-flex justify-content-center"></div>
     </div>
+    <div class="container" id="content"></div>
     <script src="./scripts/event.js"></script>
   </body>
 </html>
